--- a/payment_webpay/views/payment_acquirer.xml
+++ b/payment_webpay/views/payment_acquirer.xml
@@ -8,7 +8,7 @@
             <field name="inherit_id" ref="payment.acquirer_form"/>
             <field name="arch" type="xml">
               <field name="environment" position="after">
-                <field name="webpay_mode" attrs="{'invisible':[('provider','!=','webpay')]}"/>
+                <field name="webpay_mode"/>
               </field>
                 <xpath expr='//group[@name="acquirer"]' position='after'>
                   <group attrs="{'invisible': [('provider', '!=', 'webpay')]}">
